Update and rename IUCA-INFOSEC_Fall_2018_Syllabus.tex to IUCA-INFOSEC__2018_Syllabus.tex

--- a/Syllabus/IUCA-INFOSEC__2018_Syllabus.tex
+++ b/Syllabus/IUCA-INFOSEC__2018_Syllabus.tex
@@ -35,14 +35,11 @@
             \item[Class Discussions]\hfill\\
                 \url{https://piazza.com/iuca.kg/fall2018/iuca-infosec}
             \item[Place]\hfill\\
-                TBD
+                Room 217
             \item[Time]\hfill\\
-                TBD
+                Tuesday, 9:30--10:50\\
+                Thursday, 11:05--12:25
         \end{description}
-
-    \section{Prerequisites}
-
-        TBD
 
     \section{Contact Information}
 
@@ -50,10 +47,9 @@
             \item[Instructor]\hfill\\
                 Toksaitov Dmitrii Alexandrovich\\
                 \href{mailto:toksaitov_d@iuca.kg}{toksaitov\_d@iuca.kg}
-            \item[Office]\hfill\\
-                TBD
             \item[Office Hours]\hfill\\
-                TBD
+                Monday--Friday, 19:00-21:00\\
+                Remotely through Skype at \href{mailto:toksaitov@hotmail.com}{toksaitov@hotmail.com}
         \end{description}
 
     \section{Course Overview}
@@ -63,7 +59,7 @@
     \section{Topics Covered}
 
         \begin{itemize}
-        	\item Basics of information security
+            \item Basics of information security
             \item Security management and risk assessment
             \item Desktop software security
             \item Web and mobile software security
@@ -76,12 +72,12 @@
 
     \section{Practice Tasks}
 
-        Students are required to finish several practice tasks. The tasks are based
+        Students are required to finish a number of practice tasks. The tasks are based
         on topics discussed during lectures.
 
     \section{Course Project}
 
-        The course project will be to audit a working open-source system to find vulnerabilities and fix them. 
+        The course project will be to audit a working open-source system to find vulnerabilities and fix them.
 
     \section{Final Exam}
 
@@ -91,9 +87,7 @@
 
     \section{Reading}
 
-        \begin{enumerate}
-            \item Applied Information Security: A Hands-on Approach, 1st edition by David Basin, Patrick Schaller, Michael Schläpfer (ISBN: 978-3642244735)
-        \end{enumerate}
+        Computer Security, Principles and Practice, Third Edition by William Stallings and Lawrie Brown (ISBN: 978-0133773927)
 
     \section{Grading}
 
@@ -104,18 +98,18 @@
         \end{itemize}
 
         \begin{itemize} \itemsep-10pt \parskip0pt \parsep0pt
-            \item[--] 90\%--100\%: A\\
-            \item[--] 80\%--89\%: A-\\
-            \item[--] 70\%--79\%: B+\\
-            \item[--] 65\%--69\%: B\\
-            \item[--] 60\%--64\%: B-\\
-            \item[--] 56\%--59\%: C+\\
-            \item[--] 53\%--55\%: C\\
-            \item[--] 50\%--52\%: C-\\
-            \item[--] 46\%--49\%: D+\\
-            \item[--] 43\%--45\%: D\\
-            \item[--] 40\%--42\%: D-\\
-            \item[--] Less than 39\%: F
+            \item[--] 94\%--100\%: A\\
+            \item[--] 90\%--93\%: A-\\
+            \item[--] 87\%--89\%: B+\\
+            \item[--] 84\%--86\%: B\\
+            \item[--] 80\%--83\%: B-\\
+            \item[--] 77\%--79\%: C+\\
+            \item[--] 74\%--76\%: C\\
+            \item[--] 70\%--73\%: C-\\
+            \item[--] 67\%--69\%: D+\\
+            \item[--] 64\%--66\%: D\\
+            \item[--] 60\%--63\%: D-\\
+            \item[--] Less than 60\%: F
         \end{itemize}
 
     \section{Rules}
@@ -127,4 +121,3 @@
         all parties will get zero for the task.
 
 \end{document}
-
