--- a/Syllabus/IUCA-INFOSEC_Spring_2019_Syllabus.tex
+++ b/Syllabus/IUCA-INFOSEC_Spring_2019_Syllabus.tex
@@ -59,7 +59,7 @@
     \section{Topics Covered}
 
         \begin{itemize}
-            \item Basics of information security
+        	\item Basics of information security
             \item Security management and risk assessment
             \item Desktop software security
             \item Web and mobile software security
@@ -77,7 +77,7 @@
 
     \section{Course Project}
 
-        The course project will be to audit a working open-source system to find vulnerabilities and fix them.
+        The course projects will be to audit a working open-source system to find vulnerabilities and fix them, analyze malware to understand how it works, and to secure a heterogeneous computer network that consists of Linux and Windows machines. 
 
     \section{Final Exam}
 
